--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,10 @@ services:
       dockerfile: development/nginx/Dockerfile
     container_name: book_api
     restart: unless-stopped
+    ports:
+      - "80:80"
     volumes:
-      - ./api:/app
+      - ./:/app
     env_file:
       - .env
     depends_on:
@@ -24,7 +26,7 @@ services:
     env_file:
       - .env
     volumes:
-      - ./api:/app
+      - ./:/app
     networks:
       - symfony_network
 
@@ -36,7 +38,7 @@ services:
     env_file:
       - .env
     volumes:
-      - ./api:/app
+      - ./:/app
     networks:
       - symfony_network
 
