--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,9 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+
+admin_routes:
+    resource: ../src/Controller/Admin/
+    type: attribute
+    prefix: /admin
+
