--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,8 +1,7 @@
-controllers:
-    resource:
-        path: ../src/Controller/
-        namespace: App\Controller
+api_v1:
+    resource: ../src/Controller/Api/V1
     type: attribute
+    prefix: /api/v1
 
 admin_routes:
     resource: ../src/Controller/Admin/
